Fixing refactoring bugs.